NXP-24090: Cleanup & format